--- a/lettutor/app.json
+++ b/lettutor/app.json
@@ -1,30 +1,35 @@
 {
-  "expo": {
-    "name": "lettutor",
-    "slug": "lettutor",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "expo": {
+        "name": "lettutor",
+        "slug": "lettutor",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./src/assets/logo/lettutor.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./src/assets/logo/lettutor.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./src/assets/logo/lettutor.png",
+                "backgroundColor": "#ffffff"
+            },
+            "package": "com.ngothanhluc.lettutor"
+        },
+        "web": {
+            "favicon": "./src/assets/logo/lettutor.png"
+        },
+        "extra": {
+            "eas": {
+                "projectId": "0cab920c-31f5-4ebe-b62e-811392dccc5a"
+            }
+        },
+        "owner": "ngothanhluc"
     }
-  }
 }
