--- a/lettutor/package.json
+++ b/lettutor/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.8.3",
+    "axios": "^1.6.1",
     "expo": "~49.0.13",
     "expo-av": "~13.4.1",
     "expo-status-bar": "~1.6.0",
@@ -21,10 +24,12 @@
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
