--- a/chatgpt_app/pubspec.yaml
+++ b/chatgpt_app/pubspec.yaml
@@ -33,7 +33,11 @@ dependencies:
 
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
-    cupertino_icons: ^1.0.2
+    cupertino_icons: ^1.0.6
+    flutter_spinkit: ^5.2.0
+    provider: ^6.1.1
+    animated_text_kit: ^4.2.2
+    http: ^1.1.0
 
 dev_dependencies:
     flutter_test:
