--- a/lettutor/package.json
+++ b/lettutor/package.json
@@ -4,11 +4,13 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^6.0.0",
+    "@config-plugins/react-native-pdf": "^6.0.0",
     "@react-native-async-storage/async-storage": "^1.19.6",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -20,17 +22,24 @@
     "axios": "^1.6.1",
     "expo": "~49.0.13",
     "expo-av": "~13.4.1",
+    "expo-dev-client": "~2.4.12",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-blob-util": "^0.19.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-i18n": "^2.0.15",
     "react-native-paper": "^5.11.1",
+    "react-native-pdf": "^6.7.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "react-native-reanimated": "~3.3.0",
+    "@react-native-picker/picker": "2.4.10",
+    "react-native-pager-view": "6.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
