--- a/lettutor/package.json
+++ b/lettutor/package.json
@@ -12,6 +12,8 @@
     "@config-plugins/react-native-blob-util": "^6.0.0",
     "@config-plugins/react-native-pdf": "^6.0.0",
     "@react-native-async-storage/async-storage": "^1.19.6",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.9",
@@ -28,18 +30,17 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.6",
+    "react-native-calendars": "^1.1303.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.1",
     "react-native-pdf": "^6.7.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
-    "react-redux": "^8.1.3",
-    "@react-native-community/datetimepicker": "7.2.0",
-    "react-native-reanimated": "~3.3.0",
-    "@react-native-picker/picker": "2.4.10",
-    "react-native-pager-view": "6.2.0"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
