--- a/lettutor/eas.json
+++ b/lettutor/eas.json
@@ -13,7 +13,11 @@
             },
             "distribution": "internal"
         },
-        "production": {}
+        "production": {
+            "env": {
+                "EXPO_PUBLIC_BASE_URL": "https://sandbox.api.lettutor.com/"
+            }
+        }
     },
     "submit": {
         "production": {}
