--- a/lettutor/package.json
+++ b/lettutor/package.json
@@ -27,7 +27,9 @@
         "expo-dev-client": "~2.4.12",
         "expo-splash-screen": "~0.20.5",
         "expo-status-bar": "~1.6.0",
+        "i18next": "^23.7.20",
         "react": "18.2.0",
+        "react-i18next": "^14.0.1",
         "react-native": "0.72.6",
         "react-native-blob-util": "^0.19.6",
         "react-native-calendars": "^1.1303.0",
