--- a/lettutor/package.json
+++ b/lettutor/package.json
@@ -3,10 +3,15 @@
     "version": "1.0.0",
     "main": "node_modules/expo/AppEntry.js",
     "scripts": {
-        "start": "expo start",
-        "android": "expo run:android",
+        "start": "set NODE_ENV=development&& expo start",
+        "android": "set NODE_ENV=development&& npx expo run:android",
         "ios": "expo run:ios",
-        "web": "expo start --web"
+        "web": "expo start --web",
+        "dev": "set NODE_ENV=development&& npx expo start",
+        "prod": "set NODE_ENV=production&& npx expo start",
+        "build:android:dev": "eas build --profile development --platform android",
+        "build:android:pre": "eas build --profile preview --platform android",
+        "build:android:prod": "eas build --profile production --platform android"
     },
     "dependencies": {
         "@config-plugins/react-native-blob-util": "^6.0.0",
